# estnltk

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  COPYRIGHT  LICENSE  MANIFEST.in  README.md  README.rst  __init__.py  adverb_verb_collocation_net.py  base_collocation_net.py  changes.txt  circle.yml  clean.bat  clean.sh  collocation_net.ipynb  collocation_net.py  description.txt  developer_readme.txt  estnltk.estner.html  estnltk.html  estnltk.mw_verbs.html  estnltk.pyvabamorf.html  estnltk.textclassifier.html  estnltk.wordnet.html  example.ipynb  genindex.html  index.html  index_est.html  installation.html  modules.html  noun_adjective_collocation_net.py  object_verb_collocation_net.py  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  (+11 more)
estnltk/: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  __about__.py  __init__.py  annotation_validator.py  clausesegmenter.py  core.py  corpus.py  disambiguator.py  dividing.py  encoding.py  enveloping_span.py  javaprocess.py  layer.py  logger.py  maltparser_support.py  morf.py  names.py  ner.py  np_chunker.py  pyproject.toml  render_html.py  requirements.txt  resolve_layer_dag.py  run_tests.py  setup.py  span.py  spans.py  teicorpus.py  text.py  text2 dep layer documentation.ipynb  text2.py  text2_test.py  textcleaner.py  textdiagnostics.py  textprocessor.py  timex.py  tokenize.py  (+5 more)
estnltk/conda-recipe/: README.md
estnltk/converters/: CG3_exporter.py  CG3_importer.py  TCF_exporter.py  TCF_importer.py  __init__.py  cg3_annotation_importer.py  cg3_annotation_parser.py  conll_exporter.py  conll_importer.py  conll_ner_exporter.py  conll_ner_importer.py  conv_oldMrf_to_vabamrfJson.py  dict_exporter.py  dict_importer.py  example_1.mrf  gt_conversion.py  json_converter.py  json_exporter.py  json_importer.py  layer_dict_converter.py  readme.md  texta_exporter.py
estnltk/corpora/: estner_sample.json.bz2
estnltk/corpus_processing/: add_morph_and_save_results.py  parse_enc.py  parse_enc2017.py  parse_ettenten.py  parse_koondkorpus.py  readme.md  split_large_corpus_files_into_subsets.py
estnltk/database/: __init__.py  database.py  database2.py  elastic.py  elasticsearch_example.py  importer.py  mapping.json  mapping.py
estnltk/estner/:  __init__mallet.py  __init__.py  corpusutil.py  crfsuiteutil.py  estmorfutil.py  evaluation.py  featureextraction.py  ner.py  nlputil.py  settings.py  util.py
estnltk/estnltk/: __init__.py  common.py  core.py  default_resolver.py  downloader.py  resolve_layer_dag.py  resource_utils.py  resources_utils.py  text.py
estnltk/examples/: convert_koondkorpus.py  ex00_quick_example.py  ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  lemmatize_mysql.py  morf_analysis_synthesis.py  ner_tag.py  ner_train.py  process_tei.py  split_large_koondkorpus_files.py
estnltk/finite_grammar/: __init__.py  grammar.py  grammar_operations.py  layer_graph.py  parsing.py  phrase_list_generator.py  phrase_list_tagger.py  trees.py
estnltk/grammar/: __init__.py  common.py  conflictresolver.py  example.py  grammar.py  match.py
estnltk/grammarextractor/: common.py  exceptions.py  grammar.py  match.py  production.py  symbol.py  symbols.py
estnltk/helpers/: attrdict.py
estnltk/import/: ettenten_patterns.py  ettenten_reeglite_analyys.txt  tokenization_patterns.ipynb
estnltk/java/: javaprocess.py  readme.md
estnltk/java-res/: LIB_LICENSES.txt  readme.txt
estnltk/layer/: __init__.py  ambiguous_attribute_list.py  ambiguous_attribute_tuple_list.py  ambiguous_span.py  annotation.py  attr_lists.py  attribute_list.py  attribute_tuple_list.py  base_span.py  enveloping_span.py  immutable_list.py  lambda_attribute.py  lambda_layer.py  layer.py  span.py  span_list.py  span_operations.py  to_html.py
estnltk/layer_operations/: __init__.py  combine.py  conflict_resolver.py  consecutive.py  flatten.py  groupby.py  intersections.py  join.py  layer_indexing.py  layer_operations.py  merge.py  merging.py  pretty_printer.py  rebase.py  rolling.py  shift.py  span_positions.py  splitting.py  splitting_discontinuous.py
estnltk/legacy/: core.py  dividing.py  names.py  text.py
estnltk/license_headers/: UT Copyright notice - centralized.txt  UT Copyright notice - file scope.txt
estnltk/mw_verbs/: basic_verbchain_detection.py  readme.txt  utils.py  verbchain_detector.py  verbchain_nom_vinf_extender.py
estnltk/neural_morph/: data_utils.py
estnltk/odds_and_ends/: README.md
estnltk/preinstall/: __init__.py  caching.py
estnltk/prettyprinter/: __init__.py  extractors.py  marker.py  prettyprinter.py  rules.py  templates.py  terminalprettyprinter.py  test_rules.py  testanalyse.py  values.py
estnltk/pyvabamorf/: __init__.py  morf.py  six.py  vabamorf.i  vabamorf.py
estnltk/rewriting/: __init__.py  rewriting.py
estnltk/scribbles/: broken_adjective_phrase_tagger=(.ipynb  difftagger_constrictions.ipynb  examples_.txt  grammar_problem_xx.ipynb  grammar_tags_problem.ipynb  hospital_addresses.csv  morph_stuff_v1.6.4b.ipynb  name_vocabulary.csv  regexes.csv  regexes_fixed.csv  spec_word_voc.csv  split_by_sentence_problem.ipynb  test_new_vabamorf_binaries_2019-10-15.ipynb  testing_question.ipynb  tokenization_problem.ipynb
estnltk/single_layer_operations/: __init__.py  layer_positions.py
estnltk/src/: LICENSE  README.md
estnltk/storage/: __init__.py
estnltk/syntax/: __init__.py  json2mrf.py  maltparser_support.py  parsers.py  readme  rtolkija.pl  scoring.py  syntax_preprocessing.py  syntax_utils.py  tagger.py  tagger09  tpron.pl  utils.py  vislcg3_syntax.py  w2json.py
estnltk/taggers/: __init__.py  adj_phrase_tagger_doc.ipynb  atomizer.py  combined_tagger.py  combining_tagger.py  event_tagger.py  gt_morf.py  morf.py  morf_common.py  postanalysis_tagger.py  premorf.py  readme.md  regex_tagger.py  retagger.py  sentence_tokenizer.py  sequential_tagger.py  tag_comments_from_csv.py  tagger.py  (+10 more)
estnltk_core/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
estnltk_neural/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
(+3174 files in other folders)
