[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "estnltk_core"
authors = [
    {name = "University of Tartu"},
    {name = "Siim Orasmaa", email = "siim.orasmaa@ut.ee"},
    {name = "Sven Laur", email = "swen@math.ut.ee"},
    {name = "Paul Tammo", email = "paul.tammo@gmail.com"},
]
description = "EstNLTK core - basic data structures and components of the EstNLTK library"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["natural language processing data structures", "linguistic processing data structures"]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic"
]
dependencies = [
    'regex>=2015.07.19', # improved Python regular expressions
    'networkx',          # building graphs: required for layers
    'pandas',            # Panel Data Analysis library for Python
    'packaging'          # Required for version checking
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["estnltk_core*"]
namespaces = false

[project.urls]
homepage = "https://github.com/estnltk/estnltk"
documentation = "https://github.com/estnltk/estnltk/tree/main/tutorials"
repository = "https://github.com/estnltk/estnltk/tree/main/estnltk_core"
changelog = "https://github.com/estnltk/estnltk/blob/main/CHANGELOG.md"